# collab_nav_ground-jetson

./: .gitattributes  .gitignore  .gitmodules  .pylintrc  DOCS.md  JETSON_SECURITY_INTEGRATION.md  README.md  dev.md  requirements-full.txt  requirements.txt
config/: cartographer.lua  security_policy.yaml  (+1 more)
src/amr_drone_nav/: package.xml  setup.cfg  setup.py
src/amr_drone_nav/amr_drone_nav/: alignment_node.py  map_fusion_node.py  map_normalizer_node.py  stub_drone_map_publisher.py  stub_slam_map_publisher.py  world_odom_tf_node.py
src/amr_drone_nav/config/: nav2_params.yaml
src/amr_drone_nav/launch/: bringup_global_only.launch.py
src/arena_map_builder/: CMakeLists.txt  DOCS.md  README.md  default.yaml  package.xml  setup.cfg  setup.py
src/arena_map_builder/action/: BuildArenaMap.action
src/arena_map_builder/arena_map_builder/: consistency.py  example_client.py  map_diagnostics.py  occupancy.py
src/arena_map_builder/arena_map_builder/processing/: drone_map_grid_gen.py  fiducials.py  pose_graph.py  stitch_graph.py  transfer_obstacles.py
src/arena_map_builder/data/models/: lightglue_only.onnx  superpoint_only.onnx
src/arena_map_builder/launch/: build_arena_map.launch.py
src/arena_map_builder/scripts/: build_arena_map_server
src/arena_map_builder/sweep/: params.html  rank.py  run_matrix.py  sweep.py
src/arena_map_builder/sweep/stitching/: export_portable_model.py  extract_features.py  label.py  run_matrix_v2.py  run_matrix_v3.py  sweep.py  train_classifier.ipynb
src/arena_map_builder_msgs/: CMakeLists.txt  package.xml
src/arena_map_builder_msgs/action/: BuildArenaMap.action
src/arena_marker_localizer/: CMakeLists.txt  DOCS.md  README.md  example_client.py  package.xml
src/arena_marker_localizer/arena_marker_localizer/: aggregation.py  debug_image.py  intrinsics.py  marker_detection.py  optitrack.py  pipeline.py  quality.py  service_node.py  transforms.py
src/arena_marker_localizer/config/: calib_gt.yaml  calibration.yaml  corrected_T_map_from_opti.yaml  corrected_T_map_from_opti_kfold.yaml  default.yaml
src/arena_marker_localizer/config/aruco_pose_gt/: scan15.yaml  scan16.yaml  scan17.yaml  scan18.yaml  scan19.yaml  scan20.yaml  scan26.yaml  scan29.yaml  static_scan1.yaml  static_scan2.yaml  static_scan3.yaml  static_scan4.yaml
src/arena_marker_localizer/config/corrected_T_map_from_opti/: corrected_T_map_from_opti_kfold--manual_scans2&3.yaml  corrected_T_map_from_opti_kfold-all_single.yaml  corrected_T_map_from_opti_kfold-all_sweep.yaml
src/arena_marker_localizer/launch/: marker_localizer.launch.py
src/arena_marker_localizer/scripts/: aruco_locator  calibrate_bias  calibrate_bias_sweep  calibrate_bias_v2  calibrate_bias_v3  calibrate_bias_v3.py  calibrate_extrinsics  check_sync  euler_to_quat  marker_localizer_service  transform_telemetry
src/arena_marker_localizer_interfaces/: CMakeLists.txt  package.xml
src/arena_marker_localizer_interfaces/msg/: MarkerPose.msg
src/arena_marker_localizer_interfaces/srv/: LocalizeMarkers.srv
src/aruco_localizer/: DOCS.md  package.xml  setup.py
src/aruco_localizer/aruco_localizer/: aruco_localizer_node.py
src/aruco_localizer/config/: params.yaml
src/aruco_localizer/launch/: aruco_localizer.launch.py
src/aruco_localizer/scripts/: measure_extrinsics.py
src/fusion/: DOCS.md  package.xml  setup.cfg  setup.py
src/fusion/fusion/: fusion_node.py
src/fusion/launch/: fusion.launch.py
src/map_fusion/: README.md  package.xml  setup.cfg  setup.py
src/map_fusion/config/: map_fusion_params.yaml  nav2_params.yaml
src/map_fusion/launch/: demo.launch.py  map_fusion.launch.py
src/map_fusion/map_fusion/: coarse_search.py  geometry.py  grid_utils.py  icp.py  map_fusion_node.py  mock_publishers.py  preprocessing.py
src/map_fusion/test/: test_alignment.py  test_copyright.py  test_flake8.py  test_pep257.py
src/mission_orchestrator/: DOCS.md  README.md  package.xml  setup.cfg  setup.py
src/mission_orchestrator/config/: orchestrator_params.yaml
src/mission_orchestrator/launch/: orchestrator.launch.py
src/mission_orchestrator/mission_orchestrator/: map_quality_classifier.py  orchestrator_node.py  scan_data_io.py
src/mission_orchestrator/recorded_data/scan10/: aruco_amr_pose.yaml  aruco_goal_pose-old.yaml  aruco_goal_pose.yaml  drone_map.yaml
src/mission_orchestrator/recorded_data/scan113/: aruco_amr_pose.yaml  aruco_goal_pose.yaml
src/mission_orchestrator/recorded_data/scan15/: aruco_amr_pose.yaml  aruco_goal_pose.yaml  drone_map.yaml
src/mission_orchestrator/recorded_data/scan16/: aruco_amr_pose.yaml  aruco_goal_pose.yaml  drone_map.yaml
src/mission_orchestrator/recorded_data/scan17/: aruco_amr_pose.yaml  aruco_goal_pose.yaml  drone_map.yaml
src/mission_orchestrator/recorded_data/scan18/: aruco_amr_pose.yaml  aruco_goal_pose.yaml  drone_map.yaml
src/mission_orchestrator/recorded_data/scan20/: aruco_amr_pose.yaml  aruco_goal_pose.yaml  drone_map.yaml
src/mission_orchestrator/recorded_data/scan21/: aruco_amr_pose.yaml  aruco_goal_pose.yaml  drone_map.yaml
src/mission_orchestrator/scripts/: mock_drone_video_stream.py  run_hw_test_amr_mapping.py  run_hw_test_amr_nav.py  run_hw_test_drone.py  run_hw_test_drone_amr.py  run_hw_test_drone_stitch.py  run_hw_test_full_nav.py  run_hw_test_postscan.py  run_hw_test_postscan_amr.py  run_hw_test_s01_s06_s11.py  run_hw_test_s01_s11.py  run_hw_test_s05_s11.py  run_hw_test_s06_s20.py  run_hw_test_s06_s20_amr.py  run_hw_test_s10_s20.py  save_scan_data.py  start_vslam.sh
src/mission_orchestrator/test/: __init__.py  conftest.py  test_drone.py  test_helpers.py  test_optitrack.py  test_pipeline.py  test_rasp.py
src/security_integration_test/: package.xml  setup.cfg  setup.py
src/security_integration_test/launch/: security_test.launch.py
src/security_integration_test/security_integration_test/: stub_nodes.py
src/security_integration_test/test/: conftest.py  test_security_integration.py
src/world_mapper/: DOCS.md  package.xml  setup.cfg  setup.py
src/world_mapper/launch/: mapper.launch.py
src/world_mapper/world_mapper/: occupancy_mapper.py
(+176 files in other folders)
