<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arena_map_builder</name>
  <version>0.1.0</version>
  <description>
    ROS2 Humble action server that turns an aerial video of a robotics arena
    into a probabilistic nav2 OccupancyGrid. Wraps the standalone
    drone_map_grid_gen (video → top-down stitched map) and
    transfer_obstacles (noisy map → clean obstacle map) pipelines and adds
    a consistency-aware rasterization stage.
  </description>
  <maintainer email="user@example.com">arena_map_builder maintainers</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <depend>arena_map_builder_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
