<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion</name>
  <version>0.1.0</version>
  <description>
    Fuses the drone OccupancyGrid (arena_map_builder) with the AMR live map
    (world_mapper) using drone-immutable + AMR-additive semantics.
  </description>
  <maintainer email="sebastianopulido04@gmail.com">Sebastian</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>ros2_security</exec_depend>
  <exec_depend>ros2_security_msgs</exec_depend>

</package>