<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_fusion</name>
  <version>0.1.0</version>
  <description>
    Fuses a drone-generated global OccupancyGrid with an incrementally built
    SLAM Toolbox OccupancyGrid by estimating the rigid SE(2) transform between
    their frames (coarse FFT cross-correlation search + ICP refinement), then
    broadcasts that transform on TF and serves an aligned costmap layer to Nav2.
    Targets ROS 2 Humble.
  </description>

  <maintainer email="sebastian@example.com">Sebastian</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
