<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_orchestrator</name>
  <version>0.1.0</version>
  <description>
    End-to-end mission orchestrator for the collaborative navigation ground+drone system.
    Bootstraps the full pipeline: AMR bringup (via SSH), drone scanning mission,
    arena localisation, map building, and trajectory planning.
  </description>
  <maintainer email="daveoc1704@gmail.com">David-OC17</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>arena_marker_localizer_interfaces</depend>
  <depend>arena_map_builder_msgs</depend>

  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-paramiko</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>ros2_security</exec_depend>
  <exec_depend>ros2_security_msgs</exec_depend>

</package>
