<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>world_mapper</name>
  <version>0.1.0</version>
  <description>Custom occupancy grid mapper in the world frame, using slam_toolbox as a pose source via TF.</description>
  <maintainer email="sebastianopulido04@gmail.com">Sebastian</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <exec_depend>ros2_security</exec_depend>
  <exec_depend>ros2_security_msgs</exec_depend>

</package>